# rvlibs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md
.agents/skills/architecture-design/: SKILL.md
.agents/skills/code-review/: SKILL.md
.agents/skills/feature-development/: SKILL.md
.agents/skills/grow-together/: SKILL.md
.agents/skills/grow-together/rules/: content-structure.md  ecosystem-first.md  scope-modules.md  self-contained.md  step-by-step.md  tone-and-style.md
.agents/skills/issue-triage/: SKILL.md
.agents/skills/quality-assurance/: SKILL.md
.agents/skills/release-management/: SKILL.md
.agents/skills/requirements-gathering/: SKILL.md
.agents/skills/sync-docs/: SKILL.md
.agents/skills/system-analysis/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
apps/cargo-rvtest/: Cargo.toml
apps/cargo-rvtest/src/: main.rs
apps/cargo-rvtest/src/cli/: builder.rs  cache.rs  coverage.rs  flaky.rs  impact.rs  mod.rs  profile.rs  render.rs  runner.rs  toolchain.rs  tune.rs  watch.rs
apps/rveco/: Cargo.toml
apps/rveco/src/: main.rs
crates/cargo-rvtest/: Cargo.toml
crates/cargo-rvtest/src/: main.rs
crates/cargo-rvtest/src/cli/: flaky.rs
crates/rvfx/: Cargo.toml
crates/rvfx/src/: lib.rs
crates/rvlibs/: Cargo.toml
crates/rvlibs/src/: error.rs  lib.rs  meta.rs  version.rs
crates/rvmath/: Cargo.toml
crates/rvmath/src/: consts.rs
crates/rvmath/src/algebra/: derivative.rs  evaluate.rs  parser.rs
crates/rvmath/src/calculus/: derivatives.rs  series.rs
crates/rvmath/src/geometry/: constants.rs  mod.rs  shapes_2d.rs
crates/rvmath/src/la/: matrix.rs  vector.rs
crates/rvmath/src/num/: mod.rs  numeric.rs  percentage.rs  set.rs
crates/rvmath/src/ops/: logarithm.rs
crates/rvmath/src/utils/: mod.rs  parser.rs
crates/rvmath/tests/: calculus_tests.rs  evaluator_tests.rs  geometry_tests.rs  num_complex_tests.rs  set_tests.rs  unit_basic.rs  unit_ops.rs  vector_basic.rs  vector_units.rs
crates/rvnx/: Cargo.toml
crates/rvnx/src/: lib.rs
crates/rvtest/: Cargo.toml
crates/rvtest-macros/: Cargo.toml
crates/rvtest-macros/src/: lib.rs
crates/rvtest/src/: capture.rs  checksum.rs  lib.rs  param.rs  runner.rs
crates/rvtest/src/coverage/: backends.rs  util.rs
crates/rvtest/src/coverage_raw/: mod.rs  parser.rs  report.rs
crates/rvtest/src/property/: mod.rs  strategy.rs
crates/rvtest/src/report/: html.rs  json.rs  tap.rs
crates/rvtest/src/spec/: execute.rs  mod.rs
crates/rvtest/tests/: cli.rs  coverage.rs  mock.rs  property.rs  runner.rs  snapshot.rs  spec.rs
docs/: architecture.md  conventions.md  dep-graph.md  known-issues.md  philosophy.md  roadmap.md  testing.md
docs/learn/: index.md
docs/learn/async/: index.md
docs/learn/async/foundations/: async-await.md  executors.md  futures.md  index.md
docs/learn/async/runtimes/: index.md  tokio.md
docs/learn/design/: index.md
docs/learn/design/api-design/: ergonomics.md  index.md  naming.md
docs/learn/design/error-handling/: custom-errors.md  index.md  result-option.md
docs/learn/design/patterns/: builder.md  entry-api.md  index.md  newtype.md  raii-drop.md
docs/learn/math/: algebra.md  calculus.md  geometry.md  index.md  linear-algebra.md  numeric-types.md  units.md
docs/learn/math/algebra/: algebra.md  index.md
docs/learn/math/calculus/: calculus.md  index.md
docs/learn/math/foundations/: index.md  numeric-types.md  units.md
docs/learn/math/geometry/: geometry.md  index.md
docs/learn/math/linear-algebra/: index.md  linear-algebra.md
docs/learn/rust/: borrowing.md  collections.md  concurrency.md  error-handling.md  index.md  modules-and-packages.md  ownership.md  traits.md
docs/learn/rust/advanced/: index.md  macros.md  unsafe.md
docs/learn/rust/basics/: closures.md  control-flow.md  data-types.md  enums.md  (+11 more)
docs/learn/tests/: architecture-tests.md  assertions.md  bdd-specs.md  benchmark.md  ci-integration.md  concurrent-code.md  coverage.md  faster-feedback.md  flaky-tests.md  hooks-and-setup.md  index.md  legacy-and-refactoring.md  mocking.md  parametrized-tests.md  property-based-testing.md  snapshots.md  structs-and-enums.md  test-organization.md  testing-errors.md  why-test.md  writing-tests.md
docs/learn/tooling/: index.md
docs/rvmath/: architecture.md  conventions.md  roadmap.md  testing.md
docs/rvtest/: conventions.md  getting-started.md  philosophy.md  roadmap.md
docs/rvtest/learn/: 00-index.md  01-why-test.md  03-test-organization.md  04-writing-effective-tests.md  05-assertions-and-matchers.md  06-testing-errors.md  07-testing-structs-and-enums.md  09-setup-and-teardown.md  10-test-doubles.md  11-mocking-external-deps.md  14-coverage.md  16-benchmark-and-regression.md  18-ci-integration.md  20-testing-concurrent-code.md  21-faster-feedback-loops.md
rvmath/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
rvmath/.github/workflows/: rust.yml
rvmath/docs/: conventions.md  philosophy.md  roadmap.md
rvtest/: README.md
rvtest/crates/cargo-rvtest/: Cargo.toml
rvtest/crates/cargo-rvtest/src/cli/: args.rs  mod.rs  watch.rs
rvtest/crates/rvtest-macros/: Cargo.toml
rvtest/docs/: architecture.md  getting-started.md  testing.md
rvtest/docs/learn/: 02-rust-basics-for-test.md  08-parametrized-tests.md  12-property-based-testing.md  13-snapshot-testing.md  15-flaky-tests.md  17-legacy-and-refactoring.md  19-architecture-tests.md
(+118 files in other folders)
