[workspace]
resolver = "2"
members = [
    "crates/rvmath",
    "crates/rvtest",
    "crates/rvtest-macros",
    "crates/cargo-rvtest",
]

[workspace.package]
version = "0.1.0"
authors = ["Reas Vyn <reasvyn@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/reasvyn/rvlibs"
homepage = "https://github.com/reasvyn/rvlibs"
readme = "README.md"
keywords = ["math", "testing", "utilities"]
categories = ["science", "mathematics", "development-tools"]
