[workspace]
resolver = "2"
members = [
    "crates/rvlibs",
    "crates/rvmath",
    "crates/rvtest",
    "crates/rvtest-macros",
    "crates/rvnx",
    "crates/rvfx",
    "apps/cargo-rvtest",
    "apps/rveco",
]

[workspace.package]
version = "0.1.0"
authors = ["Reas Vyn <reasvyn@gmail.com>"]
edition = "2024"
description = "Modular Rust libraries powering the Rveco creative development suite"
license = "MIT OR Apache-2.0"
repository = "https://github.com/reasvyn/rvlibs"
homepage = "https://github.com/reasvyn/rvlibs"
readme = "README.md"
keywords = ["game-engine", "graphics", "ui", "ecs", "math", "testing"]
categories = ["game-development", "graphics", "mathematics", "development-tools"]
