[package]
name = "rvfx"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
description = "Body — Services, rendering, windowing, editor UI for the Rveco ecosystem"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
rvnx = { path = "../rvnx" }
