[package]
name = "rvmath"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "serde/derive"]

[dependencies]
rvlibs = { path = "../rvlibs", version = "0.1.0" }
serde = { version = "^1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
rvtest = "0.1"
