[package]
name = "rvtest-macros"
version = "0.3.0"
edition = "2024"
description = "Proc-macros for rvtest — A Next Level Testing Library for Rust"
license = "MIT"
repository = "https://github.com/reasvyn/rvlibs"
homepage = "https://github.com/reasvyn/rvlibs"
documentation = "https://docs.rs/rvtest-macros"

[lib]
proc-macro = true

[dependencies]
rvlibs = { path = "../rvlibs", version = "0.1.0" }
syn = { version = "2.0.117", features = ["full", "extra-traits"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"

[dev-dependencies]
rvtest = { path = "../rvtest", features = ["macros"] }
