[package]
name = "rvtest"
version = "0.3.2"
edition = "2024"
description = "A Next Level Testing Library for Rust — BDD specs, property-based testing, parametrized tests, rich reporting, and code coverage. Just a library, not a framework."
license = "MIT"
repository = "https://github.com/reasvyn/rvlibs"
homepage = "https://github.com/reasvyn/rvlibs"
documentation = "https://docs.rs/rvtest"

[dependencies]
libc = "0.2.186"
notify = "8.2.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
glob = "0.3.2"
regex = "1"
sha2 = "0.10.8"
similar = "2.7.0"
toml = "0.8"
rvtest-macros = { path = "../rvtest-macros", version = "0.3.0", optional = true }

[features]
default = []
macros = ["rvtest-macros"]
