[package]
name = "cargo-rvtest"
version = "0.3.2"
edition = "2024"
description = "CLI binary for rvtest testing library — just a library, not a framework"
license = "MIT"
repository = "https://github.com/reasvyn/rvlibs"
homepage = "https://github.com/reasvyn/rvlibs"

[dependencies]
rvtest = { path = "../rvtest", version = "0.3.2" }
clap = { version = "4.6.1", features = ["derive"] }
sha2 = "0.10.8"
libc = "0.2.186"
notify = "8.2.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
